# skul-africa-engine

./: README.md
skul_engine/: .env  Architecture Overview  Cargo.toml
skul_engine/data/: engine.db
skul_engine/src/: auth.rs  file_parser.rs  main.rs  router.rs  school_form_parser.rs  server.rs  student_processor.rs
skul_engine/src/curriculum/: mod.rs  models.rs  receiver.rs
skul_engine/src/database/: curriculum_store.rs  db.rs  mod.rs
skul_engine/src/utils/: mod.rs
