[package]
name = "skul_engine"
version = "0.1.0"
edition = "2021"


[dependencies]
zip = "0.6"
quick-xml = "0.31"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"


axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"


# For extracting XML inside `.docx`
encoding_rs = "0.8"
