[package]
name = "skul_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core functionality
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"


# Async web server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"

# File parsing
zip = "0.6"
quick-xml = "0.31"
encoding_rs = "0.8"

# Authentication
jsonwebtoken = "9.2"
